--- a/SPIFFS-Dateien/parameter.htm
+++ b/SPIFFS-Dateien/parameter.htm
@@ -3,33 +3,24 @@
    <head>
       <meta charset="utf-8">
       <title>ESP-Parameter</title>
-           <style type="text/css">
-              div.rahmen { width:700px; margin:10px auto; padding:10px; border:1px solid #000; }
-         div.version { width:700px; font-size:0.7em; }
-           </style>
-  
-    <style type="text/css">
-		.button300 {
-	      width:300px;
-	   }
-	 </style>
-
-  
+      <link rel="stylesheet" type="text/css" href="/global.css">
+      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+      <style type="text/css"> div.rahmen { width:900px; } </style>
    </head>
 
-      <body>
-         <div class="rahmen">
-            <h2>Modul ESP 8266 - 12F</h2>
-            <form action="/parameter.htm" method="post" name="Parameter">
-            <h5></font>Allgemeine Modul- und WLAN-Einstellungen</h5>
+   <body>
+      <div class="rahmen">
+         <h2>Modul $MODULNAME</h2>
+         <form action="/parameter.htm" method="post" name="Parameter">
+            <h5>Allgemeine Modul- und WLAN-Einstellungen</h5>
             <p><label>Modulname: </label><input type="text" id="name_id" name="name" value="$Name"></p>
             <p><label>SSID: </label><input type="text" id="ssid_id" name="ssid" value="$Ssid"></p>
             <p><label>Passwort: </label><input type="text" id="pw_id" name="pw" value="$Passphrase"></p>
             <p><label>eigene statische IP: </label><input type="text" id="localip_id" name="localip" value="$Localip"></p>
             <p><label>Gateway: </label><input type="text" id="gateway_id" name="gateway" value="$Gateway"></p>
             <p><label>BSSID: </label><input type="text" id="bssid_id" name="bssid" value="$Bssid"></p>
-            <p><label>Mode: <select name="mode">$Mode</select> </label></p>
-            <label>Temperatursensor-Model <select name="model">$tModel</select> </label>
+            <p><label>Mode: <select class="auswahl_mode" name="mode">$Mode</select> </label></p>
+            <label>Temperatursensor-Model <select class="auswahl_model" name="model">$tModel</select> </label>
             <h5>Einstellungen im Sensormodus</h5>
             <p><label>RemoteIP: </label><input type="text" id="rip_id" name="rip" value="$Rip"></p>
             <p><label>RemotePort: </label><input type="text" id="rp_id" name="rp" value="$Rp"></p>
@@ -47,20 +38,20 @@
             <p>
                <label>PushService1 - Id: </label>
                <input type="text" id="ps1_id" name="ps1" value="$Ps1">
-               <input class="button300" type="submit" name="ps1_button" value="PushService1 starten" >
+               <input class="link_button" type="submit" name="ps1_button" value="PushService1 starten" >
             </p>
             <p>
                <label>PushService2 - Id: </label>
                <input type="text" id="ps2_id" name="ps2" value="$Ps2">
-               <input class="button300" type="submit" name="ps2_button" value="PushService2 starten" >
+               <input class="link_button" type="submit" name="ps2_button" value="PushService2 starten" >
             </p>
             <p><label>PushService3 - Id: </label>
                <input type="text" id="ps3_id" name="ps3" value="$Ps3">
-               <input class="button300" type="submit" name="ps3_button" value="PushService3 starten" >
+               <input class="link_button" type="submit" name="ps3_button" value="PushService3 starten" >
             </p>
             <p><label>PushService4 - Id: </label>
                <input type="text" id="ps4_id" name="ps4" value="$Ps4">
-               <input class="button300" type="submit" name="ps4_button" value="PushService4 starten" >
+               <input class="link_button" type="submit" name="ps4_button" value="PushService4 starten" >
             </p>
             <h5>Event - Definitionen</h5>
             <p>
@@ -81,14 +72,14 @@
             </p>
             <h5>Output - Definitionen</h5>
             <p>
-               <label>Output 1 - Mode <select name="output1_mode">$oMode1</select> </label>
-               <label>Output 2 - Mode <select name="output2_mode">$oMode2</select> </label>
+               <label>Output 1 - Mode <select class="auswahl_model" name="output1_mode">$oMode1</select> </label>
+               <label>Output 2 - Mode <select class="auswahl_model" name="output2_mode">$oMode2</select> </label>
             </p>
-            <p><input class="button300" type="submit" name="update" value="Daten aktualisieren" ></p>
-            <p><input class="button300" type='button' onclick="location.href='/';" value="zur&uuml;ck" /></p>
-            </form>
-            <p>$Parameter</p>
-         <div class='version'>V W_07</div>
+            <p><br><input class="link_button" type="submit" name="update" value="Daten aktualisieren" ></p>
+            <p><br><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
+         </form>
+         <p>$Parameter</p>
+         <div class='version'>V R 3</div>
          </div>
         </body>
 </html>
