--- a/SPIFFS-Dateien/err.htm
+++ b/SPIFFS-Dateien/err.htm
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>ESP-Err</title>
-		<style type="text/css"> 
-			div.rahmen { width:700px; margin:10px auto; padding:10px; border:1px solid #000; } 
-		</style>
-	</head>
+   <head>
+      <meta charset="utf-8">
+      <title>ESP-Info</title>
+      <link rel="stylesheet" type="text/css" href="/global.css">
+      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   </head>
 
-	<body>
-		<div class="rahmen">
-			<h2>Fehleranalyse</h2>
-			<p>
-         $Error
-			</p>
-			<p><input type='button'onclick="location.href='/';"value="zur&uuml;ck"/></p>
-			<div class='version'>V W_02</div>
-		</div>
+   <body>
+      <div class="rahmen">
+         <h2>Modul $MODULNAME</h2>
+         <h3>Moduldaten</h3>
+         <p>$Info</p>
+         <h3>Netzwerkverbindung</h3>
+         <p>$NetInfo</p>
+         <h2>Fehleranalyse</h2>
+         <p>$Error</p>
+         <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
+         <div class='version'>V R 3</div>
+      </div>
 		 
-	</body>
+   </body>
 	
 </html>
