--- a/SPIFFS-Dateien/gpio.htm
+++ b/SPIFFS-Dateien/gpio.htm
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>ESP-GPIO</title>
-		<style type="text/css"> 
-			div.rahmen { width:700px; margin:10px auto; padding:10px; border:1px solid #000; } 
-		</style>
-	</head>
+   <head>
+      <meta charset="utf-8">
+      <title>ESP-GPIO</title>
+      <link rel="stylesheet" type="text/css" href="/global.css">
+      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   </head>
 
-	<body>
-		<div class="rahmen">
-			<h2>Modul ESP 8266 - 12F</h2>
-			<h3>Sensordaten, Betriebsspannung, GPIO</h3>
-			$Temperatur
-			$Vcc
-			<p><input  type='button' onclick="location.href='/';" value="zur&uuml;ck" /></p>
-		<div class='version'>V W_02</div>
-		</div>
-	</body>
+   <body>
+      <div class="rahmen">
+         <h2>Modul $MODULNAME</h2>
+         <h3>Sensordaten, Betriebsspannung, GPIO</h3>
+            <br><br>
+            $Temperatur
+            $Vcc
+            <br><br>
+         <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
+         <div class='version'>V R 3</div>
+       </div>
+   </body>
 </html>
