--- a/SPIFFS-Dateien/help.htm
+++ b/SPIFFS-Dateien/help.htm
@@ -1,101 +1,133 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>ESP-Help</title>
-		<style type="text/css"> 
-			div.rahmen { width:700px; margin:10px auto; padding:10px; border:1px solid #000; } 
-		</style>
-	</head>
+   <head>
+      <meta charset="utf-8">
+      <title>ESP-Help</title>
+      <link rel="stylesheet" type="text/css" href="/global.css">
+      <style type="text/css"> div.rahmen { width:1100px; } </style>         
+   </head>
 
-	<body>
-		<div class="rahmen">
-			<h2>Modul ESP 8266 - 12F</h2>
-			<h3>Hilfe für den Umgang und die Konfiguration des Moduls</h3>
-         <img src="/test.png" alt="Testbild">
-			<p>
-				<ul>
-					<li><h5>Allgemeines</h5>
-						Die hier verwendeten Software kann je nach Konfiguration als Temperatursensor, Schalter oder Zustandsdetektor 
-                  konfiguriert werden. Zusätzlich kann ein Webserver die Sensordaten anderer Module entgegennehmen und aufbereitet 
-                  anzeigen.<br>
-						Die Software wird vorkonfiguriert ausgeliefert, kann aber auch nach eigenem Ermessen verändert werden. Das gilt 
-						für die anzuzeigenden Webseiten, als auch für die Software selbst.
-						Beim ersten Start versucht das Modul, sich in dem konfigurierten Wlan-Netz einzubuchen. Während dieser Zeit 
-						blinkt das Modul. Nach 25 Versuchen wird abgebrochen und es konfiguriert sich als AccessPoint mit der 
-                  Zugangsadresse "192.168.4.1". In diesem Modus leuchtet die Modul-LED ständig. Der Link "Parameter" führt zur 
-                  Konfiguration des Moduls. 
-						Hier bitte die SSID und das Passwort des eigenen Heimnetzes eingeben. Beim nächsten Start sollte sich dann das 
-						Modul automatisch einbuchen. Die zugewiesene IP-Adresse des Moduls kann man im Router des Heimnetzes erfahren. 
-						Linux-User können als root auch "nmap -sP 192.168.X.0/24" eingeben. (X durch Heimnetz-Adresse ersetzen)<br>
-						Alternativ kann das Modul auch über die serielle Schnittstelle (BAUD 115200 8N1) konfiguriert werden. Hier 
-						werden auch Debug-Ausgaben angezeigt. Unter Linux kann dafür "minicom" verwendet werden.
-					</li>
-					<li><h5>Die verschiedenen Modi des Moduls.</h5>
-						"A" - AccessPoint-Modus. In diesem Modus arbeitet das Modul als AccessPoint. Es ist über die Adresse 192.168.4.1 erreichbar. Dabei 
-						muß der Computer/Tablet/Handy sich in das Modul-Wlan einbuchen. Hier wird die Grundkonfiguration vorgenommen. 
-                  ( SSID und Passwort Heim-WLAN ). Dieser Modus wird immer eingestellt,wenn sich das Modul nicht in's Heim-Wlan 
-                  einbuchen kann.<br><br>
-						"W" - Webserver-Modus. In diesem Modus ist das Modul ubers Heim-Netz zu erreichen. Dabei bucht es sich mit den konfigurierten 
-                  Parametern in's Heim-Wlan ein. Hier werden in der Regel dann alle weiteren Konfigurationen und Einstellungen 
-                  vorgenommen. Des weiteren kann hier auch neue Firmware geflashed werden.<br><br>
-						"W+" - Wie W, im Webservermodus. Zusätzlich wird ein UDP-Port auf eingehende Verbindungen überwacht. Der Port 
-                  muß in der Regel nicht verändert werden und kann bei 15000 belassen werden. Auf der Seite "sensor.htm" werden 
-                  die empfangenen Daten angezeigt. Wenn bei Remote-Ip die eigene Modul-IP-Adresse angegeben wird, werden auf dieser 
-                  Seite auch die eigenen Modul-Sensordaten angezeigt.<br><br>
-                  "M" - MixedMode. Das Modul bucht sich wie im "W"-Modus ins Heim-Wlan ein. Zusätzlich baut es aber noch einen 
-                  AccessPoint mit dem IP-Bereich 192.168.4.X auf. In diesen können sich Sensor-Module einbuchen und bilden so 
-                  einen eigenen abgeschirmten IP-Bereich.<br/><br/>
-						"S" - Hierbei handelt es sich um einen reinen Sensormodus. Das Modul erwacht in bestimmten einstellbaren Abständen, 
-						liest z.B. die Temperatur, setzt ein Datagramm ab und legt sich dann wieder schlafen. In diesem Modus ist auch 
-						Batteriebetrieb sinnvoll.
-					</li>
-					<li><h5>Dateisystem und Substitution.</h5>
-						Folgende Dateien werden im SPIFFS-Dateisystem verwendet:<br>
-						"startPage.htm", "parameter.htm", "hilfe.htm", "firmware.htm", "gpio.htm" und sensor.htm<br><br>
-						Folgende Substitutionsschlüsselworte sind verfügbar:<br>
-						"$Info" - Liefert allgemeine Angaben des Moduls. Z.B. Speichergrößen, SDK-Version, Heapgröße.<br>
-						"$NetInfo - Liefert die Parameter des Moduls. Z.B. Modulname, WLAN-SSID, WLAN-Passwort, WLAN-Kanal ....<br>
-						Verwendet werden diese Schlüsselworte in "startPage.htm".<br><br>
-						$Parameter - Enthält den Status des Aktualisierens.<br>
-						$Name, $Ssid, $Passphrase, $Mode, $Rip, $Rp, $Dsleep - Modulparameter<br>
-						Verwendet werden diese Parameter in "parameter.htm".<br><br>
-						$Temperatur und Vcc werden in "gpio.htm" verwendet.<br><br>
-						$Sensor wird in "sensor.htm" verwendet. !!! noch zu vervollständigen !!!!
-					</li>
-					<li><h5>Konfiguration von Temperatur-Aliasen.</h5>
-                  Die Temperatursensoren werden auf der Seite gpio.htm angezeigt. Die DS1820-Sensoren z.B. melden sich da 
-                  zur Identifikation mit ihrem Rom-Code. Um das ganze etwas lesbarer zu machen, kann für den Rom-Code im entsprechenden 
-                  Konfigurationsfeld ein frei zu vergebender Alias-Name angegeben werden. In der sensor.htm werden sie dann mit diesem 
-                  Namen angezeigt. Bsp: 282b336007000070:Modulsensor --&gt; Der DS1820 mit dem Romcode links vom Doppelpunkt wird mit 
-                  dem Namen Modulsensor in der sensor.htm-Seite angezeigt.
-               </li>
-               <li><h5>Bedingung und Aktion.</h5>
-                  Im Konfigurationsfeld Bedingung kann eine Bedingung angegeben werden, die dann die angegebene Aktion im Aktionsfeld 
-                  beim Zutreffen der Bedingung ausführt. <br/>
-                  Die Bedingung kann festgelegte Variablennamen und Zahlen sowie die Operatoren == für ist gleich, &lt; kleiner und &gt; 
-                  größer, sowie + und - enthalten. Gültige Variablennamen sind derzeit: <br/>
-                  $in - Input-GPIO<br/>
-                  $vcc - Modul-Betriebsspannung<br/>
-                  $dht_t - DHT22-Temperatur<br/>
-                  $dht_f - DHT22-Feuchte<br/>
-                  $romcode - DS1820 Romcode<br/>
-                  Folgende Aktionen sind derzeit verfügbar:<br/>
-                  "actionPushService", "out1", "out2"<br/>
-                  Wobei out2 bei einer Endbedingung zwischen 1 - 99 PWM-Pegel ausgibt.<br/>
-                  Die Bedingung ist in umgekehrter Polnischer Notation anzugeben. (siehe Wikipedia)<br/>
-                  Bsp:<br/>
-                  "$vcc 30 &lt;" "actionPushService"<br/>
-                  - Wenn die Betriebsspannung (wird in 10tel Grad ausgegeben) 3V unterschreitet, wird eine Nachricht über 
-                  den PushService verschickt.<br/>
-                  "$282b336007000070 300 &gt;" "out1"<br/>
-                  - Wenn die Temperatur des DS1820 mit obigem Romcode 30°C überschreitet, wird der GPIO-OUT1 HIGH geschaltet, 
-                  ansonsten wird LOW geschaltet.
-					</li>				
-				</ul>
-			</p>
-			<p><a href="/">zurück</a></p>
-		</div>
-	</body>
+   <body>
+      <div class="rahmen">
+         <h2>Modul ESP 8266 - 12F</h2>
+         <h3>Hilfe für den Umgang und die Konfiguration des Moduls</h3>
+	 <ul>
+	    <li><a href="#feature">Features</a></li>
+	    <li><a href="#erstinbetriebnahme">Erstinbetriebnahme</a></li>
+	    <li><a href="#ueberblick">Die Dateien im Überblick</a></li>
+	    <li><a href="#webserver">Der Webserver</a></li>
+	    <li><a href="#konfiguration">Konfiguration</a></li>
+	    <li><a href="#modi">Die verschiedenen Modi des Moduls</a></li>
+	    <li><a href="#sensorauswahl">Die Auswahl des verwendeten Sensors</a></li>
+	    <li><a href="#sensormodus">Die Konfiguration bei Verwendung des Sensormodus</a></li>
+	    <li><a href="#programmierung">Die Programmierung des Moduls zur Ausführung von Aktionen</a></li>
+	    <li><a href="#benutzerhandbuch">Das ausführliche Benutzerhandbuch</a></li>
+	 </ul>
+         <p><h4 id="feature">Kurzer Abriss der Features</h4>
+            <ul>
+            <li>Temperaturmessungen mit max 4 DS1820,Temp-und Feuchtemessung mit DHT22, PIR-Bewegungsmelder, Fensterüberwachung, Alarmgeber, Logging usw.</li>
+            <li>Anzeige einzeln oder mehrere Sensoren gesammelt über Webserver.</li>
+            <li>Eigenes Sensor-WLan-Netz konfigurierbar.</li>
+            <li>Hardware über 5V-Netzteil oder 2 Batterien.</li>
+            <li>Selbstbauhardware oder Verwendung von z.B. dem Wemos-mini-Modul.Link:"https://wiki.wemos.cc/products:d1:d1_mini"</li>
+            <li>Passiv ( nur Anzeige ) oder aktiv programmierbar zum Ausführen von Aktionen ( Pushservice, 2 Ausgänge schaltbar als Taster, Schalter oder Dimmen ).</li>
+            </ul>
+         </p>
+	 <p><h4 id="erstinbetriebnahme">Erstinbetriebnahme</h4>
+            Die erste Firmware muß mit einem Flash-Tool (z. B. esptool.py) geflasht werden.<br>
+            Befehl unter Linux:<br>
+            "esptool.py --port /dev/ttyUSB0 write_flash --flash_mode qio --flash_size 32m 0x00000 /home/user/wlanSensor/firmware.bin".<br>
+            Nach diesem initialen Flashen können alle weiteren Firmware-Updates oder Spiffs-Dateien (html und andere Steuerdateien) über WLan und Browser 
+            eingespielt werden.
+         </p>
+         <p><h4 id="ueberblick">Folgende Dateien müssen auf's Modul geladen werden</h4>
+            <ul>
+            <li>startPage.htm - Startseite des Modul-Webservers</li>
+            <li>sensor.htm - zeigt die gesammelten Sensordaten von anderen und wahlweise auch des eigenen Moduls an </li>
+            <li>schalter.htm - hier können die 2 Ausgänge je nach Festlegung geschaltet, getastet oder gedimmt werden</li>
+            <li>parameter.htm - hier werden die Einstellungen für den Betrieb des Moduls vorgenommen</li>
+            <li>logger.htm - bei Betrieb als Logger können hier die gesammelten Loggerdaten angezeigt werden</li>
+            <li>gpio.htm - zeigt die Zustände und Sensordaten des Moduls an</li>
+            <li>err.htm - nur zur Fehleranalyse notwendig</li>
+            <li>help.htm, help_condition_action.htm - diese Hilfe</li>
+            <li>global.css - unbedingt notwendig für eine formatierte Anzeige der Daten</li>
+            <li>ntp.txt - wenn diese Datei mit gültiger IP-Adresse als Inhalt existiert, wird die Zeit lokal von dieser Adresse (z.B. die Routeradresse) abgeholt</li>
+            <li>popup.js - Javascript für die Anzeige von einblendbaren Anzeigen mit spezieller Funktionalität</li>
+            <li>slider.js - enthält die Funktionalität zum Anzeigen von Schiebereglern auf der Schalter-Website</li>
+            <li>favico.ico - verwendet der Browser zum Anzeigen eines Icon</li>
+            </ul>
+            Beim Upload der Spiffs-Dateien erscheint ein Upload-Dialog. Hierbei sollte als erste Datei immer die "global.css"-Datei geladen werden. Danach
+            sollte die startPage.htm geladen werden.<br>
+            Drückt man einen Link-Button, ohne dass die zugehörige Datei schon geladen ist, erscheint der Upload-Dialog zum Einspielen der Datei.<br><br>
+         </p>
+         <p><h4 id="webserver">Der Webserver</h4>  
+            Den Webserver des Moduls startet man durch Eingabe seiner Netzwerkadresse, oder falls noch nicht konfiguriert, durch die Eingabe von 
+            192.168.1.4. Dabei muß sich das Modul im Accespoint-Mode befinden und das Handy oder Tablet im Wlan-Netz des Moduls eingebucht sein.<br>           
+            So gehts:<br>
+            Beim ersten Start versucht das Modul, sich in dem konfigurierten Wlan-Netz einzubuchen. Während dieser Zeit blinkt das Modul. Da noch nichts 
+            konfiguriert ist, wird nach 25 Versuchen abgebrochen und es konfiguriert sich als AccessPoint mit der Zugangsadresse "192.168.4.1". 
+            In diesem Modus leuchtet die Modul-LED ständig. Jetzt kann man sich in dieses Wlan mit Namen "ESP-AP-Free" ohne Passwort einloggen. 
+	 </p>
+	 <p><h4 id="konfiguration">Die Konfiguration des Moduls</h4>
+            Als Nächstes kann das Modul durch Klick auf den Parameter-Button konfiguriert werden:<br>
+            Die wichtigsten Eingaben sind Modulname, SSID und Passwort. Ausserdem noch Mode. ( Die Modes werden weiter unten behandelt. )<br>
+            Für Modulname verwendet man am Besten einen sprechenden Namen, der das Modul etwas beschreibt. Bsp:Wohnzimmertemperatur.<br>
+            In's Feld SSID muß der Name des Heim-Netzwerkes eingegeben werden und in's Passwortfeld entsprechend das zugehörige Passwort.
+            Nach dem Speichern der Daten mit dem Speicher-Button rebootet das Modul und loggt sich im Heimnetzwerk ein.<br>
+            Die zugewiesene IP-Adresse des Moduls kann man im Router des Heimnetzes erfahren. <br>
+            Linux-User können als root auch "nmap -sP 192.168.X.0/24" eingeben. (X durch Heimnetz-Adresse ersetzen)<br>
+            Alternativ kann das Modul auch über die serielle Schnittstelle (BAUD 115200 8N1) konfiguriert werden. Hier werden auch Debug-Ausgaben angezeigt. 
+            Unter Linux kann dafür "minicom" verwendet werden.
+            <h5>Wichtig: Die Eingabefelder dürfen nur Zahlen,Buchstaben gross und klein und den Unterstrich beinhalten!</h5>
+	 </p>
+	 <p><h4 id="modi">Die verschiedenen Modi des Moduls</h4>
+            <ul><li>"A" - AccessPoint-Modus. In diesem Modus arbeitet das Modul als AccessPoint. Es ist über die Adresse 192.168.4.1 erreichbar. Dabei 
+                    muß der Computer/Tablet/Handy sich in das Modul-Wlan einbuchen. Hier wird in der Regel die Grundkonfiguration vorgenommen.</li>
+                <li>"W" - Station-Modus. In diesem Modus ist das Modul übers Heim-Netz zu erreichen. Dabei bucht es sich mit den konfigurierten 
+                    Parametern in's Heim-Wlan ein.</li>
+                <li>"M" - Mixed-Modus. Dieser Modus ist eine Kombination aus "A" und "W". Er bietet sowohl einen Acesspoint und bucht sich zusätzlich ins 
+                    Heim-Wlan ein.</li>
+                <li>"+" - Plus kann an die oben genannten Modes angehängt werden. Dann wird zusätzlich ein UDP-Port ( Remote Port in Parameter-Website)
+                    auf eingehende Verbindungen überwacht. Andere Sensoren übermitteln über diesen Port ihre Daten, die dann auf diesem Modul 
+                    (Externe Sensoren anzeigen )angezeigt werden. Wenn auf dem Modul als Remote-Ip  die eigene Modul-IP-Adresse angegeben wird, werden 
+                    auch die eigenen Sensordaten angezeigt.</li>
+                <li>"S" - Hierbei handelt es sich um einen reinen Sensormodus. Da macht der Einsatz von Batterien Sinn, weil das Modul in bestimmten 
+                    einstellbaren Abständen ( Deep Sleep-Feld in den Parametern ) aufwacht. Dann sendet es die aktuellen Sensordaten als UDP-Datagram 
+                    an ein anderes z.B. im "W+"-Modus arbeitendes Modul. Danach geht es wieder in den stromsparenden Deep-Sleep-Modus.</li>
+                <li>"L" - In diesem Modus können Daten über einen längeren Zeitraum gespeichert werden. Wird oft zu Dokumentationszwecken verwendet.</li>
+            </ul>                                        
+          </p>
+          <p><h4 id="sensorauswahl">Die Sensorauswahl</h4>
+            Unterstützt werden zur Zeit die DS1820-Temperatursensoren und der DHT22-Feuchte-und Temperatursensor.
+            <h5>Konfiguration von Temperatur-Aliasen bei der Verwendung von DS1820-Sensoren</h5>
+                Die Sensordaten des Moduls werden von der Startseite über den Button "Eing / Ausg / Temp anzeigen" aufgerufen. Die DS1820-Sensoren z.B. 
+                melden sich da zur Identifikation mit ihrem Rom-Code. Um das ganze etwas lesbarer zu machen, kann für den Rom-Code in der Parameterseite 
+                im Feld "Aliase für Temperatursensoren" ein sprechender Name für den Sensor vergeben werden. Auf der Website für externe Sensoren werden 
+                sie dann mit diesem Namen angezeigt. ( Bsp: 282b336007000070:Modulsensor )
+	 </p>
+	 <p><h4 id="sensormodus">Die erforderlichen Einstellungen bei Verwendung des Moduls im Sensormodus</h4>
+	    Im Sensormodus arbeitende Module werden üblicherweise mit Batterien betrieben. Das ist möglich, weil die Module hier nur in einem zu definierenden 
+	    Zeitintervall die Sensordaten lesen und an eine zu definierende IP-Adresse als UDP-Datagramm senden. Danach gehen sie in einen stromsparenden 
+            Sleepmodus.<br>
+	    Es muß die Ziel-IP-Adresse im Heimnetz angegeben werden. In der Regel kann der voreingestellte Ziel-Port bei 15000 belassen werden.<br>
+	    Die Dauer der Schlafzeit (DeepSleep in den Einstellungen) wird in Sekunden angegeben und sollte 1 Stunde (3600 Sekunden) nicht überschreiten.
+	 </p>
+	 <p><h4 id="programmierung">Die Programmierung des Moduls zur Ausführung von Aktionen</h4>
+	    Das Modul kann auf Sensorwerte oder den digitalen Eingang reagieren und verschiedene Aktionen ausführen. Die Aktionen werden in Abhängigkeit von 
+	    in den Parametereinstellungen zu definierenden Bedingungen ausgeführt.
+            Die genaue Beschreibung finden sie <a href="/help_condition_action.htm">hier</a>.
+         </p>
+
+	 <p><h4 id="benutzerhandbuch">Das ausführliche Benutzerhandbuch</h4>
+	    Das Benutzerhandbuch ist noch in Arbeit.
+	 </p>
+                        
+      <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
+
+      <div class='version'>Version R2</div>
+
+      </div>
+		
+   </body>
 </html>
 
