--- a/SPIFFS-Dateien/logger.htm
+++ b/SPIFFS-Dateien/logger.htm
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>ESP-Logger</title>
-		<style type="text/css"> 
-			div.rahmen { width:700px; margin:10px auto; padding:10px; border:1px solid #000; } 
-		</style>
-	</head>
+   <head>
+      <meta charset="utf-8">
+      <title>ESP-Logger</title>
+      <link rel="stylesheet" type="text/css" href="/global.css">
+      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   </head>
 
-	<body>
-		<div class="rahmen">
-			<h2>Modul ESP 8266 - 12F</h2>
-			<h3>Loggerdaten</h3>
+   <body>
+      <div class="rahmen">
+         <h2>Modul $MODULNAME</h2>
+         <h3>Loggerdaten</h3>
          <p>
             <object data="/logger.txt" type="text/plain" width="200" height="200">
                Ihr Browser kann das Objekt leider nicht anzeigen!
             </object>
          </p>
-			<p><a href="/">zurück</a></p>
-		</div>
-	</body>
+         <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
+         <div class='version'>V R 3</div>
+      </div>
+   </body>
 </html>
 
