--- a/SPIFFS-Dateien/err.htm
+++ b/SPIFFS-Dateien/err.htm
@@ -14,7 +14,7 @@
          <p>$Info</p>
          <h3>Netzwerkverbindung</h3>
          <p>$NetInfo</p>
-         <h2>Fehleranalyse</h2>
+         <h2>Fehlermeldungen</h2>
          <p>$Error</p>
          <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
          <div class='version'>V R 3</div>
