--- a/SPIFFS-Dateien/help.htm
+++ b/SPIFFS-Dateien/help.htm
@@ -55,6 +55,7 @@
             <li>popup.js - Javascript für die Anzeige von einblendbaren Anzeigen mit spezieller Funktionalität</li>
             <li>slider.js - enthält die Funktionalität zum Anzeigen von Schiebereglern auf der Schalter-Website</li>
             <li>favico.ico - verwendet der Browser zum Anzeigen eines Icon</li>
+            <li>files.htm - Aufruf mit "Modul-IP-Adresse/files.htm". Zeigt alle Dateien im Modul an. Über den Lösch-Button können sie gelöscht werden</li>
             </ul>
             Beim Upload der Spiffs-Dateien erscheint ein Upload-Dialog. Hierbei sollte als erste Datei immer die "global.css"-Datei geladen werden. Danach
             sollte die startPage.htm geladen werden.<br>
