--- a/SPIFFS-Dateien/hh10d.htm
+++ b/SPIFFS-Dateien/hh10d.htm
@@ -12,9 +12,15 @@
       <h2>Modul $MODULNAME</h2>
       <h3>Einstellungen HH10D-Modul</h3>
       <form action='hh10d.htm' method='post'>
-         <p><label>Kalibrierwerte ermitteln</label><input class="link_button" type='submit' name='calibrate' value='Jetzt kalibrieren'></p>
+         <p><label>Kalibrierwerte ermitteln </label><input class="link_button" type='submit' name='calibrate' value='Jetzt kalibrieren'></p>
          $Kalibriermeldung
-         <p><label>Feuchte anzeigen</label><input class="link_button" type='submit' name='humidity' value='Relative Feuchte anzeigen'></p>
+         <p>
+         Beim Kalibrieren wird die Datei /hh10dCalc.txt im SPIFFS-Filesystem des Moduls erstellt.<br>
+         ( Beispieleintrag z. B. "336,7785" ohne irgendwelche Leerzeilen, Sonderzeichen oder Zeilenumbrüche )<br>
+         Das bedeutet, daß der Sensitivwert 336 beträgt und der Offset 7785 ist.<br>
+         Bei Bedarf kann die Datei auch von Hand erstellt und hochgeladen werden.
+         </p>
+         <p><label>Feuchte anzeigen </label><input class="link_button" type='submit' name='humidity' value='Relative Feuchte anzeigen'></p>
          $Feuchtewert
       </form>
       <p><input class="back_button" type='button' onclick="location.href='/';" value="zurück" /></p>
